# counter-shank

./: Cargo.toml
.github/workflows/: main.yml  publish-rust-client.yml
clients/cli/: Cargo.toml
clients/cli/src/: lib.rs
clients/rust/: Cargo.toml
clients/rust/src/: lib.rs
clients/rust/tests/: create.rs
program/: Cargo.toml  idl.json
scripts/: publish-rust.sh
