[workspace]
resolver = "2"
members = ["clients/cli", "clients/rust", "program"]

[workspace.metadata.cli]
solana = "1.18.18"

[workspace.metadata.release]
pre-release-commit-message = "Publish {{crate_name}} v{{version}}"
tag-message = "Publish {{crate_name}} v{{version}}"
consolidate-commits = false

# Specify Rust toolchains for rustfmt, clippy, and build.
# Any unprovided toolchains default to stable.
[workspace.metadata.toolchains]
format = "1.78.0"
lint = "1.78.0"
